<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.ShowMovieActivity"
    tools:openDrawer="left"
    android:id="@+id/drawerlayout">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout

        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title=""/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/profileLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/width_image_profile"
                    android:layout_height="@dimen/height_image_profile"
                    android:src="@drawable/cat8"
                    android:layout_marginStart="@dimen/margin_medium_3"
                    android:layout_marginTop="@dimen/margin_medium"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_profile_name"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/text_heading_1x"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/margin_xlarge"
                    android:layout_marginStart="@dimen/margin_medium"/>

            </LinearLayout>


            <include
                android:layout_below="@+id/profileLinearLayout"
                android:id="@+id/vpNowShowingMovieList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/view_pod_movie_list"
                android:layout_marginTop="@dimen/margin_medium_2"/>



            <include
                android:id="@+id/vpCommingSoonMovieList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                layout="@layout/view_pod_movie_list"
                android:layout_below="@id/vpNowShowingMovieList"
                android:layout_marginTop="@dimen/margin_medium_2"/>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorBackGround"
        android:fitsSystemWindows="true"
        android:maxWidth="300dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/margin_medium_2"
            android:paddingEnd="@dimen/margin_medium_2">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivPrifile"
                android:layout_width="@dimen/margin_xxlarge"
                android:layout_height="@dimen/margin_xxlarge"
                android:layout_marginTop="64dp"
                android:src="@drawable/cat8"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/ivPrifile"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_toEndOf="@id/ivPrifile"
                android:text="@string/lbl_name"
                android:textColor="@color/white"
                android:textSize="@dimen/margin_medium_2"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvName"
                android:layout_alignStart="@id/tvName"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/lbl_gmail_name"
                android:textColor="@color/white"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/tvEmail"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/tvEmail"
                android:text="@string/lbl_edit"
                android:textAlignment="textEnd"
                android:textColor="@color/white"/>

            <LinearLayout
                android:id="@+id/llPromotioncode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivPrifile"
                android:layout_marginTop="@dimen/margin_xxlarge"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivPromotionImage"
                    android:layout_width="@dimen/margin_xlarge_n"
                    android:layout_height="@dimen/margin_xlarge_n"
                    app:srcCompat="@drawable/ic_baseline_local_offer_white_24dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPromotioncode"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_xlarge_n"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:text="@string/lbl_promotion_code"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_regular_2x"
                    android:textStyle="bold"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/llSelectLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/llPromotioncode"
                android:layout_marginTop="@dimen/margin_xxlarge"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivSelectLanguageImage"
                    android:layout_width="@dimen/margin_xlarge_n"
                    android:layout_height="@dimen/margin_xlarge_n"
                    app:srcCompat="@drawable/ic_baseline_g_translate_wgite_24dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSelectLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_xlarge_n"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:text="@string/lbl_select_language"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_regular_2x"
                    android:textStyle="bold"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/llTearmOfService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/llSelectLanguage"
                android:layout_marginTop="@dimen/margin_xxlarge"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivTearmOfServiceImage"
                    android:layout_width="@dimen/margin_xlarge_n"
                    android:layout_height="@dimen/margin_xlarge_n"
                    app:srcCompat="@drawable/ic_baseline_assignment_white_24dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTearmOfService"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_xlarge_n"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:text="@string/lbl_tearm_service"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_regular_2x"
                    android:textStyle="bold"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/llHelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/llTearmOfService"
                android:layout_marginTop="@dimen/margin_xxlarge"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivHelpImage"
                    android:layout_width="@dimen/margin_xlarge_n"
                    android:layout_height="@dimen/margin_xlarge_n"
                    app:srcCompat="@drawable/ic_baseline_help_white_24dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvHelp"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_xlarge_n"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:text="Help"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_regular_2x"
                    android:textStyle="bold"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/llRates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/llHelp"
                android:layout_marginTop="@dimen/margin_xxlarge"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivRatesImage"
                    android:layout_width="@dimen/margin_xlarge_n"
                    android:layout_height="@dimen/margin_xlarge_n"
                    app:srcCompat="@drawable/ic_baseline_stars_white_24dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvRates"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_xlarge_n"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:text="@string/lbl_rate"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_regular_2x"
                    android:textStyle="bold"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/llLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xlarge_n"
                android:layout_marginBottom="@dimen/margin_xxlarge"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivLogoutImage"
                    android:layout_width="@dimen/margin_xlarge_n"
                    android:layout_height="@dimen/margin_xlarge_n"
                    app:srcCompat="@drawable/ic_baseline_login_white_24dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLogOut"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_xlarge_n"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:text="@string/lbl_logout"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_regular_2x"
                    android:textStyle="bold"/>
            </LinearLayout>

        </RelativeLayout>
    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>